// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders 2 images 1`] = `
<blaze-avatar
  class="hydrated"
  src="my-test-image.png"
  src2="my-second-test-image.png"
>
  <div
    class="c-text c-avatar"
  >
    <img
      class="c-avatar__img"
      src="my-test-image.png"
    />
    <img
      class="c-avatar__img"
      src="my-second-test-image.png"
    />
  </div>
</blaze-avatar>
`;

exports[`Avatar renders an image 1`] = `
<blaze-avatar
  class="hydrated"
  src="my-test-image.png"
>
  <div
    class="c-text c-avatar"
  >
    <img
      class="c-avatar__img"
      src="my-test-image.png"
    />
    
  </div>
</blaze-avatar>
`;

exports[`Avatar renders correctly sized circles 1`] = `
<blaze-avatar
  class="hydrated"
  size="super"
  text="GP"
>
  <div
    class="c-text c-avatar u-super"
    data-text="GP"
  >
    
  </div>
</blaze-avatar>
`;

exports[`Avatar renders images, text and sizes it correctly 1`] = `
<blaze-avatar
  class="hydrated"
  size="super"
  src="my-test-image.png"
  src2="my-second-test-image.png"
  text="GP"
>
  <div
    class="c-text c-avatar u-super"
    data-text="GP"
  >
    <img
      class="c-avatar__img"
      src="my-test-image.png"
    />
    <img
      class="c-avatar__img"
      src="my-second-test-image.png"
    />
  </div>
</blaze-avatar>
`;

exports[`Avatar renders nothing if no attributes are set 1`] = `
<blaze-avatar
  class="hydrated"
>
  
</blaze-avatar>
`;

exports[`Avatar renders text inside 1`] = `
<blaze-avatar
  class="hydrated"
  text="GP"
>
  <div
    class="c-text c-avatar"
    data-text="GP"
  >
    
  </div>
</blaze-avatar>
`;
